# odoo-19-cl1

./: Dockerfile  compose-example.txt  docker-compose.yml
addons/setup/_metapackage/: pyproject.toml
