[project]
name = "odoo-addons-oca-storage"
version = "19.0.20251217.2"
dependencies = [
    "odoo-addon-fs_attachment==19.0.*",
    "odoo-addon-fs_attachment_s3==19.0.*",
    "odoo-addon-fs_storage==19.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 19.0",
]
